// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreadcrumbContainer renders correctly with project parent 1`] = `
<DocumentFragment>
  .emotion-0:last-of-type {
  color: #21313C;
}

.emotion-0:hover,
.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover:not(:last-of-type),
.emotion-0:focus:not(:last-of-type) {
  color: #21313C;
}

<a
    class="emotion-0 emotion-1"
    href="https://www.mongodb.com/docs/"
  >
    Docs Home
  </a>
  .emotion-0 {
  cursor: default;
}

.emotion-0:last-of-type {
  color: #21313C;
}

<span
    class="emotion-0 emotion-1"
  >
     → 
  </span>
  .emotion-0:last-of-type {
  color: #21313C;
}

.emotion-0:hover,
.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover:not(:last-of-type),
.emotion-0:focus:not(:last-of-type) {
  color: #21313C;
}

<a
    class="emotion-0 emotion-1"
    href="https://www.mongodb.com/docs/view-analyze"
  >
    View & Analyze
  </a>
  .emotion-0 {
  cursor: default;
}

.emotion-0:last-of-type {
  color: #21313C;
}

<span
    class="emotion-0 emotion-1"
  >
     → 
  </span>
  .emotion-0:last-of-type {
  color: #21313C;
}

.emotion-0:hover,
.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover:not(:last-of-type),
.emotion-0:focus:not(:last-of-type) {
  color: #21313C;
}

<a
    class="emotion-0 emotion-1"
    href="/documents/view/"
  >
    MongoDB Compass
  </a>
</DocumentFragment>
`;

exports[`BreadcrumbContainer renders correctly without project parent 1`] = `
<DocumentFragment>
  .emotion-0:last-of-type {
  color: #21313C;
}

.emotion-0:hover,
.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover:not(:last-of-type),
.emotion-0:focus:not(:last-of-type) {
  color: #21313C;
}

<a
    class="emotion-0 emotion-1"
    href="https://www.mongodb.com/docs/"
  >
    Docs Home
  </a>
  .emotion-0 {
  cursor: default;
}

.emotion-0:last-of-type {
  color: #21313C;
}

<span
    class="emotion-0 emotion-1"
  >
     → 
  </span>
  .emotion-0:last-of-type {
  color: #21313C;
}

.emotion-0:hover,
.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover:not(:last-of-type),
.emotion-0:focus:not(:last-of-type) {
  color: #21313C;
}

<a
    class="emotion-0 emotion-1"
    href="/view-analyze/"
  >
    View & Analyze Data
  </a>
</DocumentFragment>
`;
